--- a/CancherksWebApp/wwwroot/css/site.css
+++ b/CancherksWebApp/wwwroot/css/site.css
@@ -300,6 +300,10 @@ img {
     color: var(--colorMain); 
 }
 
+.datepickerInicio-input {
+    color: var(--colorMain);
+}
+
 /* Datepicker final format */
 
 .ui-datepickerFinal {
