--- a/CancherksWebApp/Pages/Admin/AgregarInstalacion.cshtml
+++ b/CancherksWebApp/Pages/Admin/AgregarInstalacion.cshtml
@@ -38,16 +38,16 @@
                     <div class="mb-3">
                         <label class="form-label">Actividades</label>
                         <div class="checkbox-container full-width">
-                            <div class="form-check form-check-inline">
-                                <input class="form-check-input" type="checkbox" id="inlineCheckbox1" value="option1">
-                                <label class="form-check-label" for="inlineCheckbox1">Fútbol</label>
-                            </div>
-                            <div class="form-check form-check-inline">
-                                <input class="form-check-input" type="checkbox" id="inlineCheckbox2" value="option2">
-                                <label class="form-check-label" for="inlineCheckbox2">Correr</label>
-                            </div>
+                            @foreach (var activity in Model.Activities)
+                            {
+                                <div class="form-check form-check-inline">
+                                    <input class="form-check-input" type="checkbox" id="@($"checkbox-{activity.Id}")" value="@activity.Id">
+                                    <label class="form-check-label" for="@($"checkbox-{activity.Id}")">@activity.Name</label>
+                                </div>
+                            }
                         </div>
                     </div>
+
 
                     <script class="jsbin" src="https://ajax.googleapis.com/ajax/libs/jquery/1/jquery.min.js"></script>
                     <label class="form-label">Foto</label>
