--- a/CancherksWebApp/Pages/Admin/Reportes.cshtml
+++ b/CancherksWebApp/Pages/Admin/Reportes.cshtml
@@ -6,6 +6,10 @@
 
     if (userRole != "2569") Response.Redirect("/ErrorPage");
 }
+@section Scripts
+    {
+    <script src="@Url.Content("~/js/Admin/Reports.js")"></script>
+}
 
 <section class="container px-5 py-3">
     <h3 style="margin-bottom: 2rem;">Reportes</h3>
@@ -26,10 +30,11 @@
         </dropdown>
 
 
-        <div style="display: flex; justify-content: center; flex-grow: 1;">
+        <div class="d-flex" style="justify-content: center; flex-grow: 1;">
             <form class="row me-3">
                 <div class="col-12">
-                    <div class="input-group date" id="datepickerInicio-container">
+                    <div class="input-group date datepicker-container" id="datepickerInicio-container">
+
                         <input type="text" class="form-control datepickerInput" id="datepickerInicio-input" placeholder="Fecha Inicio" />
                         <span class="input-group-append datepickerIcon" id="datepickerInicio-icon">
                             <span class="input-group-text bg-light d-block">
